[FIX] html_builder, *: use normal height for iframe of snippets dialog
*: website, website_sale

The iframe showing the preview of the snippets in the "Insert a block"
dialog is bigger than the dialog, with `height` and `width` set to
333%. This allows the viewport in the iframe to be large enough so that
the css rules applied are the same as for the desktop view. The size
is constraint inside the iframe with the opposite ratio (30%) to avoid
overflowing the dialog. This also leads to an excessively high viewport,
and css rules using `vh` units will appear way too big. For example,
a custom dynamic snippet for product category appears about 3 times too
tall (the initial ones has a size fixed to a third of the real one, to
compensate this effect).

The increased `height` of the iframe is not necessary to achieve the
desired breakpoint. This commit sets the height of the frame to 100%,
so that sizes in `vh` units appear reasonable.

The parallax rate used in the preview snippets dialog is reduced to
match the new height.

Steps to reproduce:
- Open website builder
- Click on "Catalog" snippets category
- Add the dynamic category snippet
- Select the added snippet
- Save this snippet as a custom snippet
- Click on "Custom" snippets category
- Bug: the items int the snippet looks way too big

task-6088029

X-original-commit: fb6ce228f94e81cea335ba0306412d4df73d61d3

--- a/addons/html_builder/static/src/snippets/snippet_viewer.scss
+++ b/addons/html_builder/static/src/snippets/snippet_viewer.scss
@@ -5,7 +5,7 @@
         overflow-x: hidden;
         overflow-y: auto;
         width: 30%;
-        height: 30%;
+        height: 100%;
         background-color: unset;
         scrollbar-gutter: stable both-edges;
     }
